--- a/index.html
+++ b/index.html
@@ -76,7 +76,14 @@ hubot&gt; http://i.giphy.com/3o85xr46bezqkTazsc.gif
 <p>You can always open up an issue <a href="https://github.com/marthyn/hubot-praise/issues">here</a></p>
 
 <h3>
-<a id="all-the-gifs-in-here" class="anchor" href="#all-the-gifs-in-here" aria-hidden="true"><span class="octicon octicon-link"></span></a>All the gifs in here</h3>
+<a id="inspiration" class="anchor" href="#inspiration" aria-hidden="true"><span class="octicon octicon-link"></span></a>Inspiration</h3>
+
+<p>First and foremost, inspiration came from <a href="https://github.com/ben">Ben Straub</a>. He gave a talk at <a href="https://twitter.com/joyofcoding">Joy of coding</a> about <a href="https://hubot.github.com/">Hubot</a>. We left out the gift cards for now though <img class="emoji" title=":smile:" alt=":smile:" src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f604.png" height="20" width="20" align="absmiddle">.</p>
+
+<p>This script was heavily inspired by <a href="https://github.com/hubot-scripts/hubot-motivate">hubot-motivate</a> and <a href="https://github.com/wjbeckett/hubot-highfive">hubot-highfive</a>. I used some code and some images and texts, but extended it with storage and more images and texts.</p>
+
+<h3>
+<a id="gif-awesomeness-submit-a-pr-if-you-miss-one" class="anchor" href="#gif-awesomeness-submit-a-pr-if-you-miss-one" aria-hidden="true"><span class="octicon octicon-link"></span></a>GIF AWESOMENESS (submit a <a href="https://github.com/marthyn/hubot-praise/pulls">PR</a> if you miss one)</h3>
 
 <p><img src="http://i.imgur.com/hcM0fWA.gif" alt="gif">
 <img src="http://i.imgur.com/LgXev.gif" alt="gif">
