Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ hubot&gt; http://i.giphy.com/3o85xr46bezqkTazsc.gif
 <h3>
 <a id="inspiration" class="anchor" href="#inspiration" aria-hidden="true"><span class="octicon octicon-link"></span></a>Inspiration</h3>
 
-<p>First and foremost, inspiration came from <a href="https://github.com/ben">Ben Straub</a>. He gave a talk at <a href="https://twitter.com/joyofcoding">Joy of coding</a> about <a href="https://hubot.github.com/">Hubot</a>. We left out the gift cards for now though <img class="emoji" title=":smile:" alt=":smile:" src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f604.png" height="20" width="20" align="absmiddle">.</p>
+<p>First and foremost, inspiration came from <a href="https://github.com/ben">Ben Straub</a>. He gave a talk at <a href="https://twitter.com/joyofcoding">Joy of coding</a> about <a href="https://hubot.github.com/">Hubot</a>. We left out the gift cards for now though <img class="emoji" title=":smile:" alt=":smile:" src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f604.png" height="20" width="20" align="absmiddle">. You can view the slides <a href="http://ben.straub.cc/talks/robots/">here</a></p>
 
 <p>This script was heavily inspired by <a href="https://github.com/hubot-scripts/hubot-motivate">hubot-motivate</a> and <a href="https://github.com/wjbeckett/hubot-highfive">hubot-highfive</a>. I used some code and some images and texts, but extended it with storage and more images and texts.</p>
 
