Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@ hubot&gt; http://i.giphy.com/3o85xr46bezqkTazsc.gif
 
 <p>This script was heavily inspired by <a href="https://github.com/hubot-scripts/hubot-motivate">hubot-motivate</a> and <a href="https://github.com/wjbeckett/hubot-highfive">hubot-highfive</a>. I used some code and some images and texts, but extended it with storage and more images and texts.</p>
 
+<p>I wrote a blog on this script <a href="https://medium.com/@marthynolthof/hubot-4a38596e8d4a">here</a></p>
+
 <h3>
 <a id="gif-awesomeness-submit-a-pr-if-you-miss-one" class="anchor" href="#gif-awesomeness-submit-a-pr-if-you-miss-one" aria-hidden="true"><span class="octicon octicon-link"></span></a>GIF AWESOMENESS (submit a <a href="https://github.com/marthyn/hubot-praise/pulls">PR</a> if you miss one)</h3>
 
